[metadata]
name = pke-boudinfl
version = 2.0.0
author = Florian Boudin
description = pke is an open source python-based keyphrase extraction toolkit
description-file = README.md
url = https://github.com/boudinfl/pke
project_urls =
    Bug Tracker = https://github.com/boudinfl/pke/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6